--- a/.github/workflows/rector_show_with_sets.yaml
+++ b/.github/workflows/rector_show_with_sets.yaml
@@ -21,4 +21,4 @@ jobs:
             -   run: composer dump-autoload
 
             # run rector
-            -   run: ./vendor/bin/rector show --config rector-with-sets.php
+            -   run: ./vendor/bin/rector show --config rector-with-sets.php --ansi
