--- a/.tools/rector/composer.json
+++ b/.tools/rector/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "rector/rector": "^0.8.2"
+        "rector/rector-prefixed": "^0.8.2"
     },
     "config": {
         "bin-dir": "../../vendor/bin"
