--- a/.tools/rector/composer.json
+++ b/.tools/rector/composer.json
@@ -1,8 +1,5 @@
 {
     "require": {
-        "rector/rector-prefixed": "^0.8.2"
-    },
-    "config": {
-        "bin-dir": "../../vendor/bin"
+        "rector/rector": "^0.8.2"
     }
 }
